Create new game on up, down, and space keydown

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
   </head>
   <body>
     <h1>Welcome to Kamp What The Fuck's Slut Machine!</h1>
+
     <noscript>You need to enable JavaScript to run this game.</noscript>
   </body>
 </html>
@@ -41,6 +42,7 @@
     Set different weights for multiplying wins based on characters
     *Allow addition of multiple winning rows
     Show winning amount in VictoryScreen
+    *Create new game on UP, DOWN, and SPACE
 
     We need a goal of success that requires more than just pulling the lever and getting random options.
     Simplest solution seems to be to allow player ability to increase/decrease bet amount.
@@ -62,5 +64,5 @@
     We want an anti-win scenario,  perhaps where a player loses all coins and can't bet any more. Maybe one that says TOO WILD when player gets 3 wilds in a row (possibly impose a penalty, like lose half coins).
 
 
-    We need a starting screen that greets people and loads a new Game on some input.  Right now I imagine only an up and down button (pocket pussy and anus combo hiding buttons?), but they can be multi-purpose.  Possible player approaches, sees placeholder video or welcome graphic, and pressing either button OR pulling lever should initiate the newGame function.
+    We need a starting screen that greets people and loads a new Game on  pressing either pussy/anus button or pulling lever (indicated by up arrow, down arrow, and space bar).
  -->
