Press Enter for new game, Space to pull lever

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
   </head>
   <body>
     <h1>Welcome to Kamp What The Fuck's Slut Machine!</h1>
+    <h2 id="hintText">press ENTER to play</h2>
 
     <noscript>You need to enable JavaScript to run this game.</noscript>
   </body>
