--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,16 @@
   </head>
   <body>
     <h1>Welcome to Kamp What The Fuck's Slut Machine!</h1>
-    <h2 id="hintText">press ENTER to play</h2>
+    <div id="hintText">
+      <h2>Details:</h2>
+      <p>
+        press ENTER to start a new game at any time<br />
+        press SPACE bar to pull the lever (or click)<br />
+        press UP or DOWN arrows to increase/decrease wager amount<br />
+        you may wager between 1 and all the money you have<br />
+        you need 100 coins to WIN the secret prize
+      </p>
+    </div>
 
     <noscript>You need to enable JavaScript to run this game.</noscript>
   </body>
@@ -38,32 +47,19 @@
 <!-- 
     Tasks:
     *Fix 3-in-a-row win (works with wild card in SYM1 slot)
-    *Show winning row with a highlight
+    *Add 5-in-a-row wins
+    *Show winning row/column with a highlight
     *Allow other row to count as a win
     Set different weights for multiplying wins based on characters
     *Allow addition of multiple winning rows
-    Show winning amount in VictoryScreen
-    *Create new game on UP, DOWN, and SPACE
-
-    We need a goal of success that requires more than just pulling the lever and getting random options.
-    Simplest solution seems to be to allow player ability to increase/decrease bet amount.
-    
-    Let's try an approach where increasing bets increases lines to check.  I'll find some math to figure out an appropriate amount needed to win per selected line vs bet amount.
-    (Need to figure out probability, and can adjust with how many characters exist in each pool.)
-
-    Win total: 100
-    Bet 1: Middle line, Win 10
-    Bet 2: All 3 Horizontal lines, Win 5
-    Bet 5: All 8 lines, Win 3
-
-
-    We need a system of picking the set of characters from a larger pool.  For example, we could have 100 sexy photos, but we only want to load 10 characters in a game (for higher probability of winning).
-    So I want a pool of characters, right now we can just have the 7;
-    then I want to have a function that runs on the creation of each new game that pulls random characters from this pool.
-    
+    *Show winning amount in VictoryScreen
+    *Create new game on ENTER, control with UP, DOWN, and SPACE
+    *Use random selection of characters from available pool
 
     We want an anti-win scenario,  perhaps where a player loses all coins and can't bet any more. Maybe one that says TOO WILD when player gets 3 wilds in a row (possibly impose a penalty, like lose half coins).
 
+    Create screen when all out of money "Aw, you lost.  Try again!"
+    It should stay up for a while, then can we call refresh on the page?
 
-    We need a starting screen that greets people and loads a new Game on  pressing either pussy/anus button or pulling lever (indicated by up arrow, down arrow, and space bar).
+    Create completion screen "You did it! Cash in your Digital Coins now to buy passage to our sexy, slutty, semi-cyber space" when user exceeds 100 coins.    
  -->
