Adjust logic for wager and increment

--- a/src/index.html
+++ b/src/index.html
@@ -55,11 +55,9 @@
     *Show winning amount in VictoryScreen
     *Create new game on ENTER, control with UP, DOWN, and SPACE
     *Use random selection of characters from available pool
+    *Add Lose Screen when out of money
 
     We want an anti-win scenario,  perhaps where a player loses all coins and can't bet any more. Maybe one that says TOO WILD when player gets 3 wilds in a row (possibly impose a penalty, like lose half coins).
-
-    Create screen when all out of money "Aw, you lost.  Try again!"
-    It should stay up for a while, then can we call refresh on the page?
 
     Create completion screen "You did it! Cash in your Digital Coins now to buy passage to our sexy, slutty, semi-cyber space" when user exceeds 100 coins.    
  -->
