Add placeholder text in html for player info

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,12 @@
         you need 100 coins to WIN the secret prize
       </p>
     </div>
+    <div class="hide-on-start">
+      <h2>
+        Total Money: <span id="money">10</span>; Current Wager:
+        <span id="wager">2</span>
+      </h2>
+    </div>
 
     <noscript>You need to enable JavaScript to run this game.</noscript>
   </body>
@@ -56,6 +62,9 @@
     *Create new game on ENTER, control with UP, DOWN, and SPACE
     *Use random selection of characters from available pool
     *Add Lose Screen when out of money
+    *Add click to create New Game on home screen, now mobile users can interact
+
+    Move player info like money and wager from side animation to a line a top, right under title.
 
     We want an anti-win scenario,  perhaps where a player loses all coins and can't bet any more. Maybe one that says TOO WILD when player gets 3 wilds in a row (possibly impose a penalty, like lose half coins).
 
