Add Jackpot file

--- a/src/index.html
+++ b/src/index.html
@@ -68,5 +68,7 @@
 
     We want an anti-win scenario,  perhaps where a player loses all coins and can't bet any more. Maybe one that says TOO WILD when player gets 3 wilds in a row (possibly impose a penalty, like lose half coins).
 
+    Maybe each game starts with bikini characters and at a certain threshold game re-populates with nude characters?
+
     Create completion screen "You did it! Cash in your Digital Coins now to buy passage to our sexy, slutty, semi-cyber space" when user exceeds 100 coins.    
  -->
