--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
   </head>
   <body>
     <h1>Welcome to Kamp What The Fuck's Slut Machine!</h1>
-    <div id="hintText">
-      <h2>Details:</h2>
+    <div id="details">
+      <h2 class="flex-center">Details:</h2>
       <p>
         press ENTER to start a new game at any time<br />
         press SPACE bar to pull the lever (or click)<br />
@@ -39,7 +39,7 @@
         you need 100 coins to WIN the secret prize
       </p>
     </div>
-    <div class="hide-on-start">
+    <div id="playerInfo" class="hide">
       <h2>
         Total Money: <span id="money">10</span>; Current Wager:
         <span id="wager">2</span>
