--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
         press SPACE bar to pull the lever (or click)<br />
         press UP or DOWN arrows to increase/decrease wager amount<br />
         you may wager between 1 and all the money you have<br />
-        you need 100 coins to WIN the secret prize
+        you need 1000 coins to unlock the next secret
       </p>
     </div>
 
