Allow wager increase with mouse click

--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,8 @@
 <!-- 
     Tasks:
     *Fix 3-in-a-row win (works with wild card in SYM1 slot)
-    *Add 5-in-a-row wins
-    *Show winning row/column with a highlight
+    *Add 7-in-a-row wins
+    Show winning row/column with a highlight
     *Allow other row to count as a win
     Set different weights for multiplying wins based on characters
     *Allow addition of multiple winning rows
@@ -57,12 +57,14 @@
     *Use random selection of characters from available pool
     *Add Lose Screen when out of money
     *Add click to create New Game on home screen, now mobile users can interact
+    *Add Memory game with cartoon sex cards
 
-    Move player info like money and wager from side animation to a line a top, right under title.
-
-    We want an anti-win scenario,  perhaps where a player loses all coins and can't bet any more. Maybe one that says TOO WILD when player gets 3 wilds in a row (possibly impose a penalty, like lose half coins).
-
-    Maybe each game starts with bikini characters and at a certain threshold game re-populates with nude characters?
-
-    Create completion screen "You did it! Cash in your Digital Coins now to buy passage to our sexy, slutty, semi-cyber space" when user exceeds 100 coins.    
+    Create new atlas of all images on one file
+    Add highlight for card in Memory game
+    Add keyboard controls for Memory game
+      WASD for up left down right
+      Remove listener for Space bar and make it the Selector
+    Add flashy border to game
+    Add sound to game
+    Integrate joystick controls for RazzPi
  -->
