Update homepage text

--- a/src/index.html
+++ b/src/index.html
@@ -28,16 +28,25 @@
     <title>WTF? Slots!</title>
   </head>
   <body>
-    <div id="details">
-      <h1>Welcome to Kamp What The Fuck's Slut Machine!</h1>
-      <h2 class="flex-center">Details:</h2>
-      <p>
-        press ENTER to start a new game at any time<br />
-        press SPACE bar to pull the lever (or click)<br />
-        press UP or DOWN arrows to increase/decrease wager amount<br />
-        you may wager between 1 and all the money you have<br />
-        you need 1000 coins to unlock the next secret
-      </p>
+    <div id="welcome">
+      <h1>
+        Welcome to Kamp W<i>hat</i> T<i>he</i> F<i>uck</i>'s Slüt Machine!
+      </h1>
+      <div class="flex-center">
+        <ul class="instructions">
+          <h2>Instructions</h2>
+          <li>press ENTER to start a new game at any time</li>
+          <li>press SPACE bar to pull the lever (or click)</li>
+          <li>
+            press + or - keys to increase/decrease Wager amount
+            <ul>
+              <li>click on the Scoreboard to maximize Wager</li>
+            </ul>
+          </li>
+          <li>you may Wager between 1 and all the Money you have</li>
+          <li>you need a Total of 1000 to unlock the next secret</li>
+        </ul>
+      </div>
     </div>
 
     <noscript>You need to enable JavaScript to run this game.</noscript>
