Reduce asset size

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,11 @@
     *Add click to create New Game on home screen, now mobile users can interact
     *Add Memory game with cartoon sex cards
 
+    Create TOO HORNY screen to pop up with admin/keyboard controls
+      should disable all controls while active
+      no timer, requires admin to clear
+      one time will return to game, two times resets game
+
     Create new atlas of all images on one file
     Add highlight for card in Memory game
     Add keyboard controls for Memory game
